--- a/styles/components/_calculator.scss
+++ b/styles/components/_calculator.scss
@@ -18,6 +18,16 @@
         width: 33rem;
         height: 5rem;
     }
+
+    &__previous-operand {
+        color: white;
+        font-size: 1.2rem;
+    }
+
+    &__current-operand {
+        color: white;
+        font-size: 2rem;
+    }
     
     &__buttons {
         background-color: darkblue;
