--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,14 @@
   width: 33rem;
   height: 5rem;
 }
+.calculator__previous-operand {
+  color: white;
+  font-size: 1.2rem;
+}
+.calculator__current-operand {
+  color: white;
+  font-size: 2rem;
+}
 .calculator__buttons {
   background-color: darkblue;
   margin: 0 auto;
