adding basic toggle

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,4 +3,8 @@
 
 @import 
     'components/calculator',
-    'components/button';
+    'components/button',
+    'components/toggle';
+
+@import 
+    'pages/home';
