--- a/styles/components/_calculator.scss
+++ b/styles/components/_calculator.scss
@@ -9,10 +9,18 @@
         margin: 0 auto;
         width: 33rem;
         height: 3rem;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    &__name {
+        color: white;
+        font-size: 1.8rem;
+        font-weight: 700;
     }
 
     &__display {
-        background-color: darkblue;
+        background-color: $display-bg;
         border-radius: 0.5rem;
         margin: 0 auto;
         width: 33rem;
@@ -30,7 +38,7 @@
     }
     
     &__buttons {
-        background-color: darkblue;
+        background-color: $element-bg;
         margin: 0 auto;
         width: 30rem;
         padding: 1.5rem;
