--- a/styles/main.css
+++ b/styles/main.css
@@ -11,9 +11,16 @@
   margin: 0 auto;
   width: 33rem;
   height: 3rem;
+  display: flex;
+  justify-content: space-between;
+}
+.calculator__name {
+  color: white;
+  font-size: 1.8rem;
+  font-weight: 700;
 }
 .calculator__display {
-  background-color: darkblue;
+  background-color: hsl(224deg, 36%, 15%);
   border-radius: 0.5rem;
   margin: 0 auto;
   width: 33rem;
@@ -28,7 +35,7 @@
   font-size: 2rem;
 }
 .calculator__buttons {
-  background-color: darkblue;
+  background-color: hsl(223deg, 31%, 20%);
   margin: 0 auto;
   width: 30rem;
   padding: 1.5rem;
@@ -98,4 +105,78 @@
 .button--divide {
   grid-column: 3/4;
   grid-row: 4/5;
+}
+
+.multi-radio-toggle {
+  position: relative;
+  background: #eee;
+  margin: 20px auto 80px;
+  padding: 0 !important;
+  border-radius: 50px;
+  height: 30px;
+  box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0);
+}
+.multi-radio-toggle__slide-bg {
+  width: 36px;
+  height: 36px;
+  position: absolute;
+  top: -3px;
+  border-radius: 50px;
+  transition: all 0.4s ease;
+}
+.multi-radio-toggle__label {
+  position: absolute;
+  z-index: 99;
+  display: block;
+  margin: 0;
+  line-height: 30px;
+  font-size: 16px;
+  width: 30px;
+  height: 30px;
+  margin: 0;
+  border-radius: 50px;
+  cursor: pointer;
+  z-index: 1;
+  text-align: center;
+  width: 70px;
+}
+.multi-radio-toggle__label p {
+  display: block;
+  margin: 0;
+  line-height: 30px;
+  font-size: 16px;
+}
+.multi-radio-toggle__label:nth-of-type(1) {
+  left: -55px;
+  width: 80px;
+  text-align: left;
+}
+.multi-radio-toggle--two {
+  width: 60px;
+}
+
+.multi-radio-toggle input[type=radio] {
+  display: none;
+}
+
+.multi-radio-toggle--two .multi-radio-toggle__label:nth-of-type(2) {
+  right: -55px;
+  text-align: right;
+  width: 80px;
+}
+
+.multi-radio-toggle input:checked ~ .multi-radio-toggle__slide-bg {
+  background: #db159e;
+}
+
+.multi-radio-toggle input:nth-child(1):checked ~ .multi-radio-toggle__slide-bg {
+  left: -3px;
+}
+
+.multi-radio-toggle input:nth-child(2):checked ~ .multi-radio-toggle__slide-bg {
+  left: 27px;
+}
+
+.body {
+  background-color: hsl(222deg, 26%, 31%);
 }/*# sourceMappingURL=main.css.map */
