--- a/styles/main.css
+++ b/styles/main.css
@@ -109,7 +109,7 @@
 
 .multi-radio-toggle {
   position: relative;
-  background: #eee;
+  background: hsl(223deg, 31%, 20%);
   margin: 20px auto 80px;
   padding: 0 !important;
   border-radius: 50px;
@@ -117,15 +117,15 @@
   box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0);
 }
 .multi-radio-toggle__slide-bg {
-  width: 36px;
-  height: 36px;
+  width: 20px;
+  height: 20px;
   position: absolute;
-  top: -3px;
+  top: 5px;
   border-radius: 50px;
   transition: all 0.4s ease;
 }
 .multi-radio-toggle input:checked ~ .multi-radio-toggle__slide-bg {
-  background: #db159e;
+  background: hsl(6deg, 63%, 50%);
 }
 .multi-radio-toggle input:nth-child(1):checked ~ .multi-radio-toggle__slide-bg {
   left: -3px;
@@ -137,20 +137,18 @@
   left: 63px;
 }
 .multi-radio-toggle__label {
+  color: white;
   position: absolute;
   z-index: 99;
   display: block;
   margin: 0;
   line-height: 30px;
   font-size: 16px;
-  width: 30px;
   height: 30px;
   margin: 0;
   border-radius: 50px;
   cursor: pointer;
-  z-index: 1;
   text-align: center;
-  width: 70px;
 }
 .multi-radio-toggle__label p {
   display: block;
@@ -159,30 +157,31 @@
   font-size: 16px;
 }
 .multi-radio-toggle__label:nth-of-type(1) {
-  left: -55px;
-  width: 80px;
+  top: -25px;
   text-align: left;
+  width: 10px;
 }
 .multi-radio-toggle__label:nth-of-type(2) {
   text-align: center;
-  width: 40px;
+  top: -25px;
   left: 50%;
-  margin-left: -20px;
+  width: 10px;
 }
 .multi-radio-toggle__label:nth-of-type(3) {
-  right: -55px;
   text-align: right;
-  width: 80px;
+  width: 10px;
+  top: -25px;
+  right: 5px;
 }
 .multi-radio-toggle__label--align-bottom p {
   display: block;
   margin-top: 30px;
 }
-.multi-radio-toggle--three {
-  width: 90px;
-}
 .multi-radio-toggle input[type=radio] {
   display: none;
+}
+.multi-radio-toggle--three {
+  width: 90px;
 }
 
 .body {
