--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,19 @@
-/* backgrounds */
+/* theme 1 */
+/* theme 2 */
 /* fonts */
+/* default value global variables */
+:root {
+  --main-bg: black;
+}
+
+.body.theme-1 {
+  --main-bg: hsl(222deg, 26%, 31%);
+}
+
+.body.theme-2 {
+  --main-bg: hsl(0deg, 0%, 90%);
+}
+
 .calculator {
   display: grid;
   grid-template: 3fr/1fr;
@@ -20,7 +34,7 @@
   font-weight: 700;
 }
 .calculator__display {
-  background-color: hsl(224deg, 36%, 15%);
+  background-color: black;
   border-radius: 0.5rem;
   margin: 0 auto;
   width: 33rem;
@@ -35,7 +49,7 @@
   font-size: 2rem;
 }
 .calculator__buttons {
-  background-color: hsl(223deg, 31%, 20%);
+  background-color: black;
   margin: 0 auto;
   width: 30rem;
   padding: 1.5rem;
@@ -43,6 +57,9 @@
   grid-template: repeat(5, 1fr)/repeat(4, 1fr);
   gap: 1rem;
   border-radius: 0.5rem;
+}
+.calculator__theme-control {
+  display: flex;
 }
 
 .button {
@@ -109,12 +126,14 @@
 
 .multi-radio-toggle {
   position: relative;
-  background: hsl(223deg, 31%, 20%);
+  background: black;
   margin: 20px auto 80px;
   padding: 0 !important;
   border-radius: 50px;
   height: 30px;
   box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0);
+  display: flex;
+  justify-content: space-between;
 }
 .multi-radio-toggle__slide-bg {
   width: 20px;
@@ -125,13 +144,13 @@
   transition: all 0.4s ease;
 }
 .multi-radio-toggle input:checked ~ .multi-radio-toggle__slide-bg {
-  background: hsl(6deg, 63%, 50%);
+  background: black;
 }
 .multi-radio-toggle input:nth-child(1):checked ~ .multi-radio-toggle__slide-bg {
-  left: -3px;
+  left: 10px;
 }
 .multi-radio-toggle input:nth-child(2):checked ~ .multi-radio-toggle__slide-bg {
-  left: 27px;
+  left: 40px;
 }
 .multi-radio-toggle input:nth-child(3):checked ~ .multi-radio-toggle__slide-bg {
   left: 63px;
@@ -144,7 +163,6 @@
   margin: 0;
   line-height: 30px;
   font-size: 16px;
-  height: 30px;
   margin: 0;
   border-radius: 50px;
   cursor: pointer;
@@ -155,16 +173,19 @@
   margin: 0;
   line-height: 30px;
   font-size: 16px;
+  width: 20px;
+  height: 50px;
 }
 .multi-radio-toggle__label:nth-of-type(1) {
   top: -25px;
   text-align: left;
   width: 10px;
+  height: 30px;
 }
 .multi-radio-toggle__label:nth-of-type(2) {
   text-align: center;
   top: -25px;
-  left: 50%;
+  left: 45%;
   width: 10px;
 }
 .multi-radio-toggle__label:nth-of-type(3) {
@@ -172,10 +193,6 @@
   width: 10px;
   top: -25px;
   right: 5px;
-}
-.multi-radio-toggle__label--align-bottom p {
-  display: block;
-  margin-top: 30px;
 }
 .multi-radio-toggle input[type=radio] {
   display: none;
@@ -185,5 +202,5 @@
 }
 
 .body {
-  background-color: hsl(222deg, 26%, 31%);
+  background: var(--main-bg);
 }/*# sourceMappingURL=main.css.map */
