styling the toggle

--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -1,9 +1,9 @@
 .button {
-    background-color: aliceblue;
-    color: black;
-    height: 3rem;
+    background-color: var(--key-bg);
+    color: var(--key-text-color);
+    height: 3.5rem;
     font-size: 2rem;
-    box-shadow: 0 0.25rem rgb(151, 151, 138);
+    box-shadow: 0 0.25rem var(--key-shadow);
     border-radius: 0.5rem;
     border: none;
 
@@ -18,8 +18,10 @@
     }
 
     &--delete, &--reset {
-        background-color: rgb(6, 6, 158);
+        background-color: var(--key-colored-1-bg);
+        box-shadow: 0 0.25rem var(--key-colored-1-shadow);
         color: white;
+        text-transform: uppercase;
 
         &:hover {
             background-color: rgb(86, 86, 175);
@@ -40,7 +42,8 @@
         grid-column: 3/5;
         grid-row: 5/6;
         
-        background-color: rgb(158, 16, 6);
+        background-color: var(--key-colored-2-bg);
+        box-shadow: 0 0.25rem var(--key-colored-2-shadow);
         color: white;
 
         &:hover {
