--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -2,4 +2,9 @@
 
 .body {
     background: var(--main-bg);
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
 }
