--- a/styles/components/_calculator.scss
+++ b/styles/components/_calculator.scss
@@ -14,42 +14,50 @@
     }
 
     &__name {
-        color: white;
+        color: var(--display-color);
         font-size: 1.8rem;
         font-weight: 700;
     }
 
     &__display {
-        background-color: $display-bg;
-        border-radius: 0.5rem;
+        background-color: var(--display-bg);
+        border-radius: 0.75rem;
         margin: 0 auto;
-        width: 33rem;
+        width: 30rem;
         height: 5rem;
+        text-align: right;
+        padding: 1.5rem;
     }
 
     &__previous-operand {
-        color: white;
-        font-size: 1.2rem;
+        color: var(--display-color);
+        font-size: 1rem;
+        height: 1rem;
     }
 
     &__current-operand {
-        color: white;
-        font-size: 2rem;
+        color: var(--display-color);
+        font-size: 3rem;
+        height: 4rem;
     }
     
     &__buttons {
-        background-color: $element-bg;
+        background-color: var(--element-bg);
         margin: 0 auto;
         width: 30rem;
-        padding: 1.5rem;
+        padding: 2rem;
         display: grid;
         grid-template: repeat(5, 1fr) / repeat(4, 1fr);
-        gap: 1rem;
+        gap: 1.8rem;
         border-radius: 0.5rem;
     }
 
     &__theme-control {
         display: flex;
+    }
+
+    &__theme-text {
+        color: var(--display-color);
     }
     
 }
