--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -1,5 +1,3 @@
-
-
 .body {
     background: var(--main-bg);
     height: 100vh;
@@ -7,4 +5,6 @@
     flex-direction: column;
     justify-content: center;
     margin: 0;
+    font-family: $font-main;
+    font-weight:  $font-weight;
 }
