--- a/styles/components/_calculator.scss
+++ b/styles/components/_calculator.scss
@@ -4,7 +4,7 @@
     gap: 2rem;
 
     &__header {
-        background-color: darkblue;
+        background-color: none;
         border-radius: 0.5rem;
         margin: 0 auto;
         width: 33rem;
@@ -17,13 +17,14 @@
         color: var(--display-color);
         font-size: 1.8rem;
         font-weight: 700;
+        align-self: center;
     }
 
     &__display {
         background-color: var(--display-bg);
         border-radius: 0.75rem;
         margin: 0 auto;
-        width: 30rem;
+        width: 31rem;
         height: 5rem;
         text-align: right;
         padding: 1.5rem;
@@ -44,7 +45,8 @@
     &__buttons {
         background-color: var(--element-bg);
         margin: 0 auto;
-        width: 30rem;
+        //width: 30rem;
+        width: min(100% - 1rem, 30rem); //todo: fix the margin
         padding: 2rem;
         display: grid;
         grid-template: repeat(5, 1fr) / repeat(4, 1fr);
@@ -58,6 +60,13 @@
 
     &__theme-text {
         color: var(--display-color);
+        align-self: flex-end;
+        //padding-top: 12px;
+        padding-bottom: 0.7rem;
+        padding-right: 1.2rem;
+        text-transform: uppercase;
+        font-size: 0.7rem;
+        letter-spacing: 0.1rem;
     }
     
 }
