--- a/styles/components/_toggle.scss
+++ b/styles/components/_toggle.scss
@@ -59,6 +59,7 @@
             font-size: 1rem;
             //width: 20px;
             height: 50px;
+            font-weight: 400;
         }
 
     }
