--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin: 0;
     font-family: $font-main;
     font-weight:  $font-weight;
