--- a/styles/components/_calculator.scss
+++ b/styles/components/_calculator.scss
@@ -2,12 +2,14 @@
     display: grid;
     grid-template: 3fr / 1fr;
     gap: 2rem;
+    width: min(100% - 3rem, 30rem);
 
     &__header {
         background-color: none;
         border-radius: 0.5rem;
-        margin: 0 auto;
-        width: 33rem;
+        //margin: 0 auto;
+        ////width: 33rem;
+        width: 100%;
         height: 3rem;
         display: flex;
         justify-content: space-between;
@@ -22,10 +24,12 @@
 
     &__display {
         background-color: var(--display-bg);
+        box-sizing: border-box;     // for padding dont increase the size of the div
         border-radius: 0.75rem;
-        margin: 0 auto;
-        width: 31rem;
-        height: 5rem;
+        //margin: 0 auto;
+        width: 100%;
+        //width: min(100% - 2rem, 30rem);//width: 31rem;
+        height: 8rem;
         text-align: right;
         padding: 1.5rem;
     }
@@ -44,9 +48,9 @@
     
     &__buttons {
         background-color: var(--element-bg);
-        margin: 0 auto;
+        //margin: 0 auto;
         //width: 30rem;
-        width: min(100% - 1rem, 30rem); //todo: fix the margin
+        //width: min(100% - 1rem, 30rem); //todo: fix the margin
         padding: 2rem;
         display: grid;
         grid-template: repeat(5, 1fr) / repeat(4, 1fr);
