--- a/styles/components/_toggle.scss
+++ b/styles/components/_toggle.scss
@@ -35,7 +35,7 @@
             //text-align:left;
             left:8px;
             width: 10px;
-            height: 30px;
+            //height: 30px;
         }
 
         &:nth-of-type(2){
@@ -58,7 +58,7 @@
             //line-height: 30px;
             font-size: 1rem;
             //width: 20px;
-            height: 50px;
+            height: 29px;
             font-weight: 400;
         }
 
