--- a/styles/utils/_variables.scss
+++ b/styles/utils/_variables.scss
@@ -123,5 +123,6 @@ $font-white: hsl(0, 0, 100%);
 $breakpoints: (
     sm: 540px,
     md: 768px,
-    lg: 1024px
+    lg: 1024px,
+    xl: 1440px
 );
