--- a/styles/components/_button.scss
+++ b/styles/components/_button.scss
@@ -1,13 +1,19 @@
 .button {
     background-color: var(--key-bg);
     color: var(--key-text-color);
-    height: 3.5rem;
+    height: 3.9rem;
     font-size: 2rem;
     box-shadow: 0 0.25rem var(--key-shadow);
     border-radius: 0.5rem;
     border: none;
     font-family: $font-main;
     font-weight: $font-weight;
+    
+
+
+    @include media-up(sm) {
+        height: 3.5rem;
+    }
 
     &:hover {
         background-color: white;
@@ -24,9 +30,14 @@
         box-shadow: 0 0.25rem var(--key-colored-1-shadow);
         color: white;
         text-transform: uppercase;
+        font-size: 1.3rem;
 
         &:hover {
             background-color: rgb(86, 86, 175);
+        }
+
+        @include media-up(sm) {
+            font-size: 2rem;
         }
     }
 
@@ -48,8 +59,14 @@
         box-shadow: 0 0.25rem var(--key-colored-2-shadow);
         color: white;
 
+        font-size: 1.3rem;
+
         &:hover {
             background-color: rgb(175, 86, 86);
+        }
+
+        @include media-up(sm) {
+            font-size: 2rem;
         }
     }
     
