--- a/styles/components/_calculator.scss
+++ b/styles/components/_calculator.scss
@@ -1,8 +1,8 @@
 .calculator {
     display: grid;
     grid-template: 3fr / 1fr;
-    gap: 2rem;
-    width: min(100% - 3rem, 30rem);
+    gap: 1.8rem;
+    width: min(100% - 3rem, 33rem);
 
     &__header {
         background-color: none;
@@ -29,21 +29,38 @@
         //margin: 0 auto;
         width: 100%;
         //width: min(100% - 2rem, 30rem);//width: 31rem;
-        height: 8rem;
+        height: 6rem;
         text-align: right;
-        padding: 1.5rem;
+        padding: 1rem;
+
+        @include media-up(sm) {
+            height: 8rem;
+            padding: 1.5rem;
+        }
     }
 
     &__previous-operand {
         color: var(--display-color);
-        font-size: 1rem;
+        font-size: 0.7rem;
         height: 1rem;
+        //line-height: 1rem;
+        //top: 50% 
+
+        @include media-up(sm) {
+            height: 1rem;
+        }
     }
 
     &__current-operand {
         color: var(--display-color);
-        font-size: 3rem;
-        height: 4rem;
+        font-size: 3.5rem;
+        height: 3rem;
+        //line-height: 3rem;
+        //top: 50%;
+
+        @include media-up(sm) {
+            height: 4rem;
+        }
     }
     
     &__buttons {
@@ -51,11 +68,18 @@
         //margin: 0 auto;
         //width: 30rem;
         //width: min(100% - 1rem, 30rem); //todo: fix the margin
-        padding: 2rem;
+        width: 100%;
+        padding: 1.5rem;
         display: grid;
         grid-template: repeat(5, 1fr) / repeat(4, 1fr);
-        gap: 1.8rem;
+        gap: 0.8rem;
         border-radius: 0.5rem;
+        box-sizing: border-box;
+
+        @include media-up(sm) {
+            gap: 1.8rem;
+            padding: 2rem;
+        }
     }
 
     &__theme-control {
